--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/ubuntu": "^5.0.12",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.5.8",
     "react": "^18.2.0",
